fixed spacing on top of cut and scrub, on bottom of upload and csv generator page works again

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -543,6 +543,10 @@ div:hover + .tooltip {
   padding: 10px 4px;
 }
 
+.previewtitle {
+  font-size: 20px;
+}
+
 .uploadedfilespreivew {
   display: block;
   width: 97%;
@@ -552,6 +556,10 @@ div:hover + .tooltip {
   border-radius: 4px;
 /*   margin: 0px 10px; */
 /*   padding: 10px 0px; */
+}
+
+.fileinformation {
+  padding-top: 5px;
 }
 
 /* ================== MANAGE STYLING ============================= */
